syntax = "proto3";
package ink.pmc.transfer.proto;

enum TransferResult {
  TRANSFER_SUCCEED = 0;
  TRANSFER_FAILED_DEST_NOT_EXISTED = 1;
  TRANSFER_FAILED_DEST_OFFLINE = 2;
  TRANSFER_FAILED_PLAYER_OFFLINE = 3;
  TRANSFER_FAILED_CONDITION = 4;
}

message TransferRsp {
  TransferResult result = 1;
}